Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ input[type=radio] { margin-right: 8px; }
 </section>
 
   </main>  <footer>
-    <div class="container small">© Discover India — Educational site. Built for classroom & personal study.</div>
+    <div class="container small">© Discover India — Educational site. Built for classroom & personal study. 2025, V1.0.0</div>
   </footer>  <script>
     document.getElementById('check').addEventListener('click',function(){
       let score=0; if(document.querySelector('input[name=q1]:checked')?.value==='b') score++;
